<resources>
    <string name="app_name">My Cart</string>
    <string name="sum_price">Sum price</string>
    <string name="total_price">Total</string>
    <string name="check_out">Check out</string>
    <string name="num_quartity">3</string>
    <string name="menu_icon_title">View Cart</string>
    <string name="quantity">Quantity</string>
    <string name="sum_cost">240000</string>
    <string name="search">Search</string>
    <string name="description">btn</string>
</resources>