<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    tools:context=".fragment.CartFragment"
    android:layout_height="match_parent"
    android:id="@+id/cart_fragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="64dp"
        app:srcCompat="@drawable/ic_baseline_shopping_cart_24"
        android:contentDescription="@string/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="64dp"
        android:layout_marginStart="173dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="174dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:text="@string/app_name"
        android:textSize="32sp"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView2"
        android:text="@string/quantity"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_width="wrap_content"
        android:text="@string/sum_price"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cart_rv"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.026"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
 />
    <LinearLayout
        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias="0.0"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/light_gray">

        <TextView
            android:id="@+id/total"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/total_price"
            android:textAlignment="center"
            android:textSize="16sp"
            android:layout_width="wrap_content"
/>

        <TextView
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20sp"
            android:id="@+id/total_price"
            android:layout_width="wrap_content"
            android:layout_weight="1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/checkout_btn"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/check_out"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            app:icon="@drawable/ic_baseline_credit_card_24"
            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>